# easy-start

./: .gitignore  README.md  angular.json  latest.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
scripts/: prepare-release.ps1  publish-update-manifest.ps1  release-lib.ps1  release-local.ps1  release-publish.ps1  release-version.ps1  setup-github-release.ps1  tauri-build-signed.ps1  verify-update-manifest.ps1
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.ci.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: install.rs  lib.rs  monitors.rs  nvm.rs  port.rs  quick_tools.rs  system_info.rs
src/app/: app.routes.ts  app.ts
src/app/components/alphabet-index/: alphabet-index.component.ts
src/app/components/app-update/: app-update.component.ts
src/app/components/category-nav/: category-nav.component.ts
src/app/components/connection-toast/: connection-toast.component.ts
src/app/components/install-panel/: install-panel.component.ts
src/app/components/node-skeleton/: node-skeleton.component.ts
src/app/components/node-version-row/: node-version-row.component.ts
src/app/data/: ninite-apps.data.ts  program-icons.data.ts  programs.data.ts  winget-map.data.ts
src/app/models/: install.model.ts  monitor.model.ts  node.model.ts  program.model.ts  quick-access.model.ts  system-info.model.ts
src/app/services/: install.service.ts  monitor.service.ts  node-manager.service.ts  quick-access.service.ts  system-info.service.ts  update.service.ts
(+11 files in other folders)
